# mcp-led-controller

./: .gitignore  README.md  build-mcp-server.bat  run-server.bat  test-client.bat
arduino/websocket-mcp/: EnvVars.h.example  websocket-mcp.ino
axum-socketio/: Cargo.toml
axum-socketio/src/: counter.rs  led.rs  main.rs
mcp-ws-client/: Cargo.toml
mcp-ws-client/src/: led.rs  main.rs
python/: main.py
