[package]
name = "axum-socketio"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
rmcp = {  version = "0.12.0", features = ["server", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socketioxide = "0.18.0"
tokio = {  version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
