[package]
name = "mcp-ws-client"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = {  version = "0.12.0", features = ["server", "transport-io"] }
rust_socketio = { version = "*", features = ["async"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = {  version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
